--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "espn-fantasy-football-api": "^0.16.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.20"
   }
 }
